[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GnomeFortress.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PatrolSpawner.gd" type="Script" id=2]
[ext_resource path="res://Textures/castle_gnome.png" type="Texture" id=3]
[ext_resource path="res://Entities/structures/PatrolArea.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

[node name="GnomeFortress" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="PatrolArea" parent="." instance=ExtResource( 4 )]
position = Vector2( 71, 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -24 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="StructureEffects" type="AnimationPlayer" parent="."]

[node name="UnitSpawner" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="SpawnTimer" type="Timer" parent="UnitSpawner"]
wait_time = 3.0
autostart = true

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="timeout" from="UnitSpawner/SpawnTimer" to="UnitSpawner" method="_on_SpawnTimer_timeout"]
